# Exam_ASDS

./: eksamen_embeddings.ipynb  main_notebook.ipynb  pyproject.toml
