[tool.poetry]
name="exam-asds"
version="0.1.0"
description=""
authors=["EsbenBL <53098504+EsbenBL@users.noreply.github.com>"]
readme="README.md"
packages=[{include="exam_asds"}]

[tool.poetry.dependencies]
python=">=3.8.1,<4.0"
pandas="^2.0.0"
ipykernel="^6.22.0"
nltk="^3.8.1"
scikit-learn="^1.2.2"
matplotlib="^3.7.1"
requests="^2.28.2"
seaborn="^0.12.2"
gensim="^4.3.1"
datasets="^2.12.0"
nbconvert="^7.4.0"
notebook="^6.5.4"
torch="^2.0.1"
transformers="4.19.1"
nbformat="^5.9.0"
sentence-transformers="^2.2.2"
plotly="^5.15.0"
umap-learn="^0.5.3"
python-dev-tools="^2023.3.24"
bertopic="^0.15.0"
kaleido="0.2.1"

[build-system]
requires=["poetry-core"]
build-backend="poetry.core.masonry.api"
